export const STRINGS = {
  TITLE: 'E.',
  HEADING: 'Sign in to Eventio.',
  SUBTITLE: 'Enter your details below.',
  EMAIL_PLACEHOLDER: 'Email',
  PASSWORD_PLACEHOLDER: 'Password',
  SIGN_IN: 'SIGN IN',
  NO_ACCOUNT: "Don't have an account? ",
  SIGN_UP: 'Sign up',
  EMAIL_ERROR: 'Please enter a valid email address',
  AUTH_ERROR: 'Oops! That email and password combination is not valid',

  // Modal and Form Labels
  CREATE_NEW_EVENT: 'Create new event',
  CLOSE_BUTTON: '✕',
  TITLE_PLACEHOLDER: 'Title',
  DESCRIPTION_PLACEHOLDER: 'Description',
  DATE_PLACEHOLDER: 'Date',
  TIME_PLACEHOLDER: 'Time',
  CAPACITY_PLACEHOLDER: 'Capacity',

  // Button and Action Text
  CREATE_BUTTON_TEXT: 'CREATE',
  DONE_BUTTON_TEXT: 'Done',

  // Error Messages
  ERROR: {
    DEFAULT: 'An error occurred, please try again later.',
  },
} as const
