...
            {isAuthenticated ? (
              <>
                <Stack.Screen
                  name={Routes.Home}
                  component={HomeScreen}
                  options={() => ({
                    headerTitle: 'Events',
                    headerTitleAlign: 'center',
                    headerLeft: () => undefined,
                    headerRight: () => (
                      <CustomIconMenu
                        icons={[
                          {
...
